--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                                                 <img src="img/portfolio/Movies_Ang.png" class="img-item img-fluid "alt="portfolio image">
                                                 <div class="properities d-flex justify-content-center position-absolute bottom-0 end-0  w-100 ">
                                                     <a id="plus" class=" d-block w-50 text-center p-3 border-end border-white"><i class="fa fa-plus text-white"></i></a>
-                                                    <a href="https://omokhtar407.github.io/Movies_Angolar/" class=" d-block w-50 text-center p-3 border-start border-white"><i class="fa fa-link text-white"></i></a>
+                                                    <a href="https://omokhtar407.github.io/Movies-Angular/" class=" d-block w-50 text-center p-3 border-start border-white"><i class="fa fa-link text-white"></i></a>
                                                 </div>
                                             </div>
                                         </div>
